crates/nash-codegen/src/snapshots/nash_codegen__known_bool_tests__wrong_test.snap
---
source: crates/nash-codegen/src/known_bool_tests.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(root), pretty(after))"
---
--- before
case@Bool true of
  Nil -> 42
--- after
case@Bool true of
  Nil -> 42
--- errors
InvalidCase("non-boolean test")
InvalidCase("non-boolean test")
